gccida/g0/compute_record_mode
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_record_mode/src/stor-layout.c:1666:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v1; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_record_mode/src/stor-layout.c:1674:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+24h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_record_mode/src/stor-layout.c:1683:15: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( field[1] == 37 ) 
     ~~~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_record_mode/src/stor-layout.c:1706:10: error: use of undeclared identifier 'machine_mode'
mode = ( machine_mode)field[3]; 
         ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_record_mode/src/obj/stor-layout.o] Error 1
